...
                    .data(uri)
                    .crossfade(enable = true)
                    .memoryCachePolicy(CachePolicy.DISABLED)
                    .diskCachePolicy(CachePolicy.DISABLED)
                    .build(),
                contentDescription = stringResource(R.string.common_preview),
                modifier = Modifier.weight(1f).fillMaxWidth().testTag("PhotoPreview_Image"),
                contentScale = ContentScale.Fit
            )
            
            AppTextField(
                value = uiState.previewCaption,
                onValueChange = { onAction(ConditionPhotoPreviewUiAction.UpdateCaption(it)) },
...
                        modifier = Modifier.weight(1f).testTag("PhotoPreview_DeleteButton")
                    ) {
                        Text(stringResource(R.string.common_delete))
                    }
                    Button(
                        onClick = { onAction(ConditionPhotoPreviewUiAction.SaveClick) },
                        modifier = Modifier.weight(1f).testTag("PhotoPreview_SaveButton"),
                        enabled = true
                    ) {
                        Text(stringResource(R.string.common_save))
                    }
                }
            }
...
